# judgment-forge

./: .gitignore  README.md  docker-compose.yml
api/: .env.example  pyproject.toml
api/judgment_forge/: __init__.py  app.py  db.py  health.py  schema.py  settings.py
api/judgment_forge/auth/: __init__.py  deps.py  passwords.py  repository.py  routes.py  service.py
api/judgment_forge/citation/: __init__.py  policy.py
api/judgment_forge/materials/: __init__.py  ingest.py  repository.py  retrieval.py  routes.py  service.py  storage.py
api/judgment_forge/projects/: __init__.py  repository.py  routes.py  service.py
api/judgment_forge/provider/: __init__.py  agent_chat.py  factory.py  fake.py  openai_compat.py  port.py
api/judgment_forge/runs/: __init__.py  graph.py  nodes.py  repository.py  routes.py  service.py  state.py  trace.py
api/judgment_forge/seed/: __init__.py  apply.py  pack.py
api/judgment_forge/web/: __init__.py  fake.py  port.py
api/tests/: test_auth.py  test_cancel_resume_hitl.py  test_checklist_hitl.py  test_citation_policy.py  test_golden_seed.py  test_health.py  test_hitl_web_gate.py  test_judgment_runs.py  test_materials.py  test_projects.py  test_provider.py  test_run_trace.py
fixtures/golden-seed/: README.md  bailian-comparison.md  eval-checklist.md
fixtures/golden-seed/materials/: agent-dev-landscape.md  excerpt-bailian-modes.md  excerpt-langgraph-runtime.md
scripts/: seed_golden_project.py
web/: .env.example  README.md  package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/lib/: api.ts  (+2 more)
(+11 files in other folders)
