[project]
name = "judgment-forge-api"
version = "0.1.0"
description = "研判工坊 (judgment-forge) FastAPI backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "psycopg[binary]>=3.2.0",
  "pydantic-settings>=2.6.0",
  "bcrypt>=4.2.0",
  "python-multipart>=0.0.12",
  "pypdf>=5.0.0",
  "httpx>=0.27.0",
  "langgraph>=0.2.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.3.0",
]

[build-system]
requires = ["setuptools>=75.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["judgment_forge*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
